# ignis

./: .gitignore  after.rs  before.rs  package-lock.json  package.json  vite.config.ts
.github/workflows/: app-build.yml
public/locales/: de.json  en.json  pl.json  tr.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: encryption.rs  lib.rs  main.rs  upload.rs
src-tauri/src/upload/: commands.rs  enums.rs  functions.rs  mod.rs  structs.rs
src/components/icons/: file-upload.icon.tsx
src/components/layouts/: root.layout.tsx
src/components/pages/home/: FullScreenThumbnail.tsx  functions.ts  page.tsx
src/components/pages/home/components/: Document.tsx  DocumentsList.tsx  LanguageSwitcher.tsx  PasswordDialog.tsx  PdfPreview.tsx  PdfPreviewList.tsx  ResetButton.tsx  Settings.tsx  ThemeToggle.tsx  Thumbnail.tsx  download-all-form.tsx  download-button.tsx  download-file-form.tsx  upload-button.tsx
src/components/pages/home/icons/: MoonIcon.tsx  SunIcon.tsx
src/components/partials/: header.partial.tsx
src/components/ui/: button.tsx  command.tsx  input.tsx  popover.tsx
src/functions/: document.ts
src/i18n/: config.ts  types.ts
src/lib/: updater.ts
src/lib/stores/: file-upload.store.ts  settings.store.ts
src/lib/types/: file-upload.types.ts  settings.types.ts
