[package]
name = "ignis"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ignis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
base64 = "0.22.1"
pdfium-render = "0.8.29"
image = "0.25.5"
uuid = "1.16.0"
lopdf = "0.36.0"
rusttype = "0.9.3"
printpdf = "0.8.2"
genpdf = "0.2.0"
md5 = "0.8.0"
rand = "0.9.1"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
cipher = { version = "0.4.4", features = ["block-padding"] }
